# OpenAPI/API_documentation.yaml
@@ -1291,17 +1291,17 @@ paths:
                     type: "string"
                     example: "Errore del server, riprova più tardi"
                   
-  /shop:
+  /coupon_cittadino:
     get:
       summary: "Lista dei coupon del cittadino"
       description: "Restituisce la lista dei coupon offerti dalle aziende che il cittadino ha ottenuto convertendo i punti guadagnati"
       tags: 
-        - "shop"
+        - "coupon_cittadino"
       security:
         - TokenAutenticazione: []      
       responses:
         "200":
-          description: "Lista dei coupon"
+          description: "Lista dei coupon del cittadino"
           content:
             application/json:
               schema:
@@ -1331,12 +1331,12 @@ paths:
                   error:
                     type: "string"
                     example: "Errore del server, riprova più tardi"
-  /shop/id_coupon:
+  /coupon_cittadino/id_coupon:
     post:
-      summary: "Aggiungi coupon allo shop del cittadino"
+      summary: "Aggiungi coupon alla lista dei coupon del cittadino"
       description: "Permette ai cittadini di convertire i propri punti in coupon"
       tags: 
-        - "shop"
+        - "coupon_cittadino"
       security:
         - TokenAutenticazione: []       
       requestBody:
@@ -1351,7 +1351,7 @@ paths:
                   example: "1234"
       responses:
         "201":
-          description: "Coupon aggiunto allo shop"
+          description: "Coupon aggiunto alla lista dei coupon del cittadino"
           content:
             application/json:
               schema:
@@ -1359,7 +1359,7 @@ paths:
                 properties:
                   id_coupon: 
                     type: "string"
-                    description: "ID del coupon appena aggiunto allo shop"
+                    description: "ID del coupon appena aggiunto alla lista dei coupon del cittadino"
                     example: "12345"
         "403":  
           description: "Forbidden: la tipologia di utente non permette la proposta di coupon"
