# app/models/coupon_cittadino.js
@@ -1,6 +1,6 @@
 const mongoose = require('mongoose');
 const Schema = mongoose.Schema;
-module.exports = mongoose.model('Shop', new Schema({
+module.exports = mongoose.model('Coupon_Cittadino', new Schema({
     id_coupon: {
         type: Schema.Types.ObjectId, ref: 'Coupon'
     },
